// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubNavList styles should render with default styles when there is a selected child 1`] = `
.circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
}

.circuit-0::after {
  content: '';
  width: 2px;
  background: #3063E9;
  height: 32px;
  border-radius: 1px;
  position: absolute;
  top: calc(32px * 1);
  -webkit-transition: top 120ms ease-in-out;
  transition: top 120ms ease-in-out;
}

.circuit-0::before {
  content: '';
  width: 2px;
  background: #333333;
  height: calc(32px * 2);
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul
  class="circuit-0 circuit-1"
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
</ul>
`;

exports[`SubNavList styles should render with default styles when there is no selected child 1`] = `
.circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
}

.circuit-0::before {
  content: '';
  width: 2px;
  background: #333333;
  height: calc(32px * 2);
  position: absolute;
  top: 0;
  border-radius: 1px;
}

<ul
  class="circuit-0 circuit-1"
>
  <li>
    Item 1
  </li>
  <li>
    Item 2
  </li>
</ul>
`;

exports[`SubNavList styles should render without children 1`] = `
.circuit-0 {
  margin: -8px 0 8px 32px;
  list-style: none;
  height: 0;
  position: absolute;
  opacity: 0;
  visibility: hidden;
  overflow: hidden;
}

.circuit-0::after {
  content: '';
  width: 2px;
  background: #3063E9;
  height: 32px;
  border-radius: 1px;
  position: absolute;
  top: calc(32px * 0);
  -webkit-transition: top 120ms ease-in-out;
  transition: top 120ms ease-in-out;
}

<ul
  class="circuit-0 circuit-1"
/>
`;
